--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+    <title>Blog web</title>
+    <link rel="shortcut icon" href="/download.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -13,7 +14,7 @@
     <div id="blogContainer">
   <div style="display: flex; background-color: rgb(45, 132, 132); height: 10vh; top: 0%; width: 100%;  ">
     <a href="profile.html" style="text-decoration: none; color: aliceblue; margin-left: 15%; color: white; cursor: pointer;
-     font-size: 22px; margin-top: 18px; margin-left: 1%; font-weight: bold;">User Profile</a>
+     font-size: 25px; margin-top: 18px; margin-left: 1%; font-weight: bold;">User Profile</a>
     <h3 id="logout"  class="logout-h3">Logout</h3>
     </div>
     <div style="box-shadow: 1px 0px 3px 0px rgba(0, 0, 0, 0.439); color: black; height: 10vh;   width: 100%; " id="das">
@@ -88,8 +89,6 @@
         <input type="submit" value="Login" class="register" />
         <p id="goToSignupBtn">signup <span style="color: white; text-align: center; font-size: 15px;">Don,t have any account</span> </p>
       </form>
-      <!-- <button onclick="show()">go to signup page</button> -->
-    
     </div>
     </div>
      <!-- <label><input type="radio" name="level" checked value="Beginner" /> Beginner </label> 
